<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:showIn="@layout/content_reminder">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radius_text" />

                <View
                    android:layout_width="2dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewRadius"/>

            </LinearLayout>

            <android.support.v7.widget.AppCompatSeekBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/seekBarRadius"
                android:max="900"
                android:progress="0"
                android:paddingTop="8dp"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="7"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:id="@+id/locationInputLayout">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/locationEditText"
                        android:singleLine="true"
                        android:inputType="textCapSentences"
                        android:hint="@string/hint_edit_text_location"/>

                </android.support.design.widget.TextInputLayout>

                <ImageButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/locationVoiceInput"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_keyboard_voice_black_24px"
                    android:background="@android:color/transparent"
                    android:tint="@color/colorAccent" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="7"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:id="@+id/remindersInputLayout">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/remindersEditText"
                        android:singleLine="false"
                        android:inputType="textMultiLine"
                        android:gravity="top"
                        android:hint="@string/hint_edit_text_reminders"/>

                </android.support.design.widget.TextInputLayout>

                <ImageButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/remindersVoiceInput"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_keyboard_voice_black_24px"
                    android:background="@android:color/transparent"
                    android:tint="@color/colorAccent" />

            </LinearLayout>

            <android.support.v7.widget.AppCompatSpinner
                style="@style/Base.Widget.AppCompat.Spinner.Underlined"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:id="@+id/prioritySpinner"
                android:entries="@array/priority_array">
            </android.support.v7.widget.AppCompatSpinner>

        </LinearLayout>

    </android.support.v7.widget.CardView>
    
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatCheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:id="@+id/setPeriod"
                android:text="@string/text_checkbox_period"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/fromLayout"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="4dp"
                android:paddingStart="4dp"
                android:visibility="gone"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_date_range_black_24px"
                        android:tint="@color/colorAccent"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/fromDatePicker"
                        android:paddingLeft="10dp"
                        android:paddingStart="10dp"
                        android:layout_gravity="center_vertical"
                        android:singleLine="true"
                        android:text="@string/from_date_text"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_access_time_black_24px"
                        android:tint="@color/colorAccent"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/fromTimePicker"
                        android:paddingLeft="10dp"
                        android:paddingStart="10dp"
                        android:layout_gravity="center_vertical"
                        android:singleLine="true"
                        android:text="@string/from_time_text"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/toLayout"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="4dp"
                android:paddingStart="4dp"
                android:visibility="gone"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_date_range_black_24px"
                        android:tint="@color/colorAccent"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/toDatePicker"
                        android:paddingLeft="10dp"
                        android:paddingStart="10dp"
                        android:layout_gravity="center_vertical"
                        android:singleLine="true"
                        android:text="@string/to_date_text"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_access_time_black_24px"
                        android:tint="@color/colorAccent"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/toTimePicker"
                        android:paddingLeft="10dp"
                        android:paddingStart="10dp"
                        android:layout_gravity="center_vertical"
                        android:singleLine="true"
                        android:text="@string/to_time_text"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/cancelButton"
            android:text="@string/cancel_button"
            android:layout_weight="1"/>

        <android.support.v7.widget.AppCompatButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/saveButton"
            android:text="@string/save_button"
            android:background="@color/colorPrimary"
            android:layout_weight="1"/>

    </LinearLayout>

</LinearLayout>